feat: add YouTube notice and update layout in RecordingPlayer component

--- a/app/locales/cs.json
+++ b/app/locales/cs.json
@@ -158,6 +158,7 @@
     "multiplePrivateBoosters": "{count} soukromých účtů",
     "returnToPlayer": "Zpět k videu",
     "closePlayer": "Zavřít video",
+    "youtubeNotice": "Video poskytuje YouTube. Po spuštění mohou být nastaveny cookies.",
     "empty": "Nic jsme nenašli."
   },
   "press": {
