feat: massive rewrite, yes again, now server does SSR in English only, making pages mostly static (= limiting costs) and i18n on client

--- a/app/locales/cs.json
+++ b/app/locales/cs.json
@@ -297,7 +297,7 @@
     },
     "view": {
       "all": "Projít všechno",
-      "rows": "Zpět na výběr"
+      "rows": "Zpět"
     },
     "search": {
       "label": "Hledat",
@@ -309,7 +309,7 @@
       "tag": "Téma",
       "episode": "Epizoda",
       "reset": "Vyčistit",
-      "allLocations": "Všechny lokace",
+      "allLocations": "Všechny",
       "allTags": "Všechna témata",
       "allEpisodes": "Všechny epizody",
       "prague": "{prague}",
