feat: refactor library route to split into featured which is now SSR and browse which is client side with initial SSR

--- a/app/locales/cs.json
+++ b/app/locales/cs.json
@@ -317,6 +317,7 @@
       "zlin": "{zlin}"
     },
     "empty": "Nic nesedí. Zkus ubrat filtry 🙂",
+    "rateLimitError": "Příliš mnoho požadavků. Chvilku počkej a zkus to znovu.",
     "notRecorded": {
       "title": "Tahle epizoda se nenahrávala",
       "body": "{episode} nemá žádný videozáznam.\nMrkni na fotky nebo si pusť jiné session.",
