feat: enhance related recordings scoring by adding recency score and refining candidate selection logic

--- a/app/locales/cs.json
+++ b/app/locales/cs.json
@@ -128,7 +128,7 @@
     "backToLibrary": "Zpět do knihovny",
     "cinema": "Kino mód",
     "exitCinema": "Vypnout kino",
-    "nextUp": "Následující",
+    "nextUp": "Další",
     "locationLabel": "Místo: {location}",
     "speaker": "Speaker",
     "date": "Datum",
