feat: prototype of newsletter editor

--- a/app/locales/cs.json
+++ b/app/locales/cs.json
@@ -947,6 +947,7 @@
     "watchLater": "Uložené přednášky",
     "checkIn": "Check-in",
     "reader": "Reader",
+    "newsletterEditor": "Editor newsletteru",
     "name": {
       "label": "Jméno",
       "empty": "Nenastaveno",
@@ -1214,24 +1215,88 @@
       "message": "Nepodařilo se načíst data videa. Zkus to prosím znovu."
     }
   },
+  "newsletterEditor": {
+    "title": "Editor newsletteru",
+    "step_editor": "Obsah",
+    "step_audience": "Publikum",
+    "step_confirmation": "Potvrdit",
+    "back": "Zpět",
+    "next": "Další",
+    "subjectLabel": "Detaily newsletteru",
+    "subject": "Předmět",
+    "subjectPlaceholder": "Zadejte předmět newsletteru...",
+    "previewText": "Náhledový text",
+    "previewTextPlaceholder": "Krátký náhled zobrazený v email klientech...",
+    "previewTextHint": "Zobrazuje se v náhledu emailu před otevřením",
+    "primaryNewsTitle": "Hlavní novinka",
+    "primaryNewsHint": "Hlavní příběh s volitelným obrázkem a tlačítkem",
+    "secondaryNewsTitle": "Vedlejší novinky",
+    "secondaryNewsHint": "Další příběhy (volitelné)",
+    "newsTitle": "Nadpis",
+    "titlePlaceholder": "Zadejte nadpis...",
+    "newsText": "Text",
+    "textPlaceholder": "Zadejte obsah...",
+    "imageUrl": "URL obrázku (volitelné)",
+    "imageUrlPlaceholder": "https://example.com/image.jpg",
+    "ctaLabel": "Text tlačítka (volitelné)",
+    "ctaLabelPlaceholder": "Číst více",
+    "ctaLink": "Odkaz tlačítka (volitelné)",
+    "ctaLinkPlaceholder": "https://...",
+    "addNews": "Přidat novinku",
+    "noSecondaryNews": "Zatím žádné vedlejší novinky",
+    "newsNumber": "Novinka #{number}",
+    "removeNews": "Odstranit tuto novinku",
+    "audienceTitle": "Vyberte publikum",
+    "audienceHint": "Vyberte, kdo obdrží tento newsletter",
+    "audienceAll": "Všichni",
+    "audienceAllDesc": "Odběratelé newsletteru a registrovaní uživatelé s povolenou komunikací",
+    "audienceSubscribers": "Pouze odběratelé newsletteru",
+    "audienceSubscribersDesc": "Pouze uživatelé přihlášení přes formulář newsletteru",
+    "audienceRegistered": "Pouze registrovaní uživatelé",
+    "audienceRegisteredDesc": "Pouze registrovaní uživatelé, kteří povolili komunitní emaily",
+    "audienceManual": "Pouze ruční zadání",
+    "audienceManualDesc": "Odeslat pouze na ručně zadané emailové adresy",
+    "manualEmailsTitle": "Další emailové adresy",
+    "manualEmailsHint": "Přidejte další příjemce (volitelné pro typy publika, povinné pro ruční zadání)",
+    "emailPlaceholder": "email@example.com",
+    "addEmail": "Přidat",
+    "confirmationTitle": "Kontrola a odeslání",
+    "confirmationHint": "Zkontrolujte newsletter před odesláním",
+    "previewSubject": "Předmět",
+    "previewPreviewText": "Náhledový text",
+    "previewContent": "Obsah",
+    "previewAudience": "Publikum",
+    "primaryLabel": "Hlavní",
+    "secondaryLabel": "Vedlejší #{number}",
+    "hasImage": "Obsahuje obrázek",
+    "hasCta": "CTA: {label}",
+    "manualEmailsList": "Další příjemci",
+    "testSend": "Odeslat test mně",
+    "testSending": "Odesílání testu...",
+    "send": "Odeslat newsletter",
+    "sending": "Odesílání...",
+    "testSendSuccess": "Testovací email úspěšně odeslán!",
+    "sendSuccess": "Newsletter úspěšně odeslán!",
+    "sendError": "Nepodařilo se odeslat newsletter. Zkuste to znovu."
+  },
   "attributions": {
-    "title": "Attribuce",
+    "title": "Použité technologie",
     "subtitle": "Open source technologie a knihovny použité v tomto projektu",
-    "intro": "Tento web je postaven pomocí open source technologií. Jsme vděční vývojářům a maintainerům těchto projektů. Níže je seznam hlavních technologií a jejich licencí.",
-    "footer": "Tento seznam obsahuje hlavní závislosti. Pro úplný seznam všech balíčků a jejich licencí se prosím podívejte do souboru package.json v repozitáři projektu.",
+    "intro": "Tento web je postaven na open source technologiích. Děkujeme vývojářům a správcům těchto projektů. Níže je seznam hlavních technologií a jejich licencí.",
+    "footer": "Tento seznam obsahuje primární závislosti. Kompletní seznam všech balíčků a jejich licencí naleznete v souboru package.json v repozitáři projektu.",
     "categories": {
-      "framework": "Framework & Core",
-      "state": "State Management",
+      "framework": "Framework a jádro",
+      "state": "Správa stavu",
       "styling": "Styling",
-      "database": "Database",
-      "i18n": "Internationalization",
-      "auth": "Authentication",
-      "utilities": "Utilities",
-      "fonts": "Fonts",
-      "build": "Build Tools",
-      "analytics": "Analytics",
-      "security": "Security",
-      "linting": "Linting & Formatting"
+      "database": "Databáze",
+      "i18n": "Internationalizace",
+      "auth": "Autentizace",
+      "utilities": "Nástroje",
+      "fonts": "Fonty",
+      "build": "Build nástroje",
+      "analytics": "Analytika",
+      "security": "Bezpečnost",
+      "linting": "Linting a formátování"
     }
   }
 }
