--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -936,6 +936,7 @@
     "watchLater": "Watch Later",
     "checkIn": "Check-in",
     "reader": "Reader",
+    "newsletterEditor": "Newsletter Editor",
     "name": {
       "label": "Name",
       "empty": "Not set",
@@ -1202,6 +1203,70 @@
       "title": "API Error",
       "message": "Failed to load video data. Please try again."
     }
+  },
+  "newsletterEditor": {
+    "title": "Newsletter Editor",
+    "step_editor": "Content",
+    "step_audience": "Audience",
+    "step_confirmation": "Confirm",
+    "back": "Back",
+    "next": "Next",
+    "subjectLabel": "Newsletter Details",
+    "subject": "Subject",
+    "subjectPlaceholder": "Enter newsletter subject...",
+    "previewText": "Preview Text",
+    "previewTextPlaceholder": "Brief preview shown in email clients...",
+    "previewTextHint": "This appears in email previews before opening",
+    "primaryNewsTitle": "Primary News",
+    "primaryNewsHint": "Main featured story with optional image and CTA button",
+    "secondaryNewsTitle": "Secondary News",
+    "secondaryNewsHint": "Additional stories (optional)",
+    "newsTitle": "Title",
+    "titlePlaceholder": "Enter news title...",
+    "newsText": "Text",
+    "textPlaceholder": "Enter news content...",
+    "imageUrl": "Image URL (optional)",
+    "imageUrlPlaceholder": "https://example.com/image.jpg",
+    "ctaLabel": "Button Label (optional)",
+    "ctaLabelPlaceholder": "Read More",
+    "ctaLink": "Button Link (optional)",
+    "ctaLinkPlaceholder": "https://...",
+    "addNews": "Add News",
+    "noSecondaryNews": "No secondary news added yet",
+    "newsNumber": "News #{number}",
+    "removeNews": "Remove this news",
+    "audienceTitle": "Select Audience",
+    "audienceHint": "Choose who will receive this newsletter",
+    "audienceAll": "All",
+    "audienceAllDesc": "Newsletter subscribers and registered users with allowed communication",
+    "audienceSubscribers": "Newsletter Subscribers Only",
+    "audienceSubscribersDesc": "Only users subscribed via the newsletter form",
+    "audienceRegistered": "Registered Users Only",
+    "audienceRegisteredDesc": "Only registered users who opted in for community emails",
+    "audienceManual": "Manual Entry Only",
+    "audienceManualDesc": "Send only to manually entered email addresses",
+    "manualEmailsTitle": "Additional Email Addresses",
+    "manualEmailsHint": "Add extra recipients (optional for audience types, required for manual only)",
+    "emailPlaceholder": "email@example.com",
+    "addEmail": "Add",
+    "confirmationTitle": "Review & Send",
+    "confirmationHint": "Review your newsletter before sending",
+    "previewSubject": "Subject",
+    "previewPreviewText": "Preview Text",
+    "previewContent": "Content",
+    "previewAudience": "Audience",
+    "primaryLabel": "Primary",
+    "secondaryLabel": "Secondary #{number}",
+    "hasImage": "Includes image",
+    "hasCta": "CTA: {label}",
+    "manualEmailsList": "Additional recipients",
+    "testSend": "Send Test to Me",
+    "testSending": "Sending test...",
+    "send": "Send Newsletter",
+    "sending": "Sending...",
+    "testSendSuccess": "Test email sent successfully!",
+    "sendSuccess": "Newsletter sent successfully!",
+    "sendError": "Failed to send newsletter. Please try again."
   },
   "attributions": {
     "title": "Attributions",
