feat: enhance MobileMoreMenu with new SVG icon and improved animations; update localization for login messages

--- a/app/locales/cs.json
+++ b/app/locales/cs.json
@@ -30,6 +30,7 @@
     "close": "Zavřít menu",
     "logoAlt": "Logo Bonfire Events",
     "profile": "Profil",
+    "login": "Přihlásit se",
     "more": "Více",
     "moreMenuTitle": "Menu",
     "settings": "Nastavení",
