--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -30,6 +30,7 @@
     "close": "Close menu",
     "logoAlt": "Bonfire Events logo",
     "profile": "Profile",
+    "login": "Sign in",
     "more": "More",
     "moreMenuTitle": "Menu",
     "settings": "Settings",
